# cpp-thread-pool

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  vcpkg.json
.github/workflows/: ci.yml
benchmarks/: stress_bench.cpp  thread_pool_benchmark.cpp
cmake/: ThreadPoolConfig.cmake.in
examples/: example.cpp  metrics_demo.cpp
include/: thread_pool.h
scripts/: plot_metrics_svg.py  run_stress_suite.py
src/: thread_pool.cpp
tests/: test_metrics_snapshot.cpp  test_reject_caller_runs.cpp  test_reject_throw.cpp  test_shutdown_cancel.cpp  test_stress_shutdown_interleaving.cpp  test_submit_for_timeout.cpp  test_submit_future.cpp  test_thread_pool.cpp  test_try_submit_full.cpp
tests/consume/: CMakeLists.txt  main.cpp
